# project_skeleton

server_build/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake
server_build/HashTable/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  HashTable.c  HashTable.c~  Makefile  cmake_install.cmake  gay.c  gay.c~  gay.h  gay.h~
server_build/LinkedList/: AssertionWrapper.c  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  LinkedList.c  LinkedList.c~  Makefile  cmake_install.cmake
server_build/gest2/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
server_build/gest2/testserver/: Makefile  (+11 more)
server_build/libbar/: AssertionWrapper.c~  AssertionWrapper.h~  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  HttpUtils.cpp  HttpUtils.cpp~  HttpUtils.h  HttpUtils.h~  Makefile  bar.cpp  bar.cpp~  bar.h  bar.h~  cmake_install.cmake
server_build/libfoo/: AssertionWrapper.h  CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  LinkedList.c  Makefile  cmake_install.cmake  foo.cpp  foo.h  gay.c  gay.c~  gay.h  gay.h~
server_build/main/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  main.cpp~  server  server.cpp  server.cpp~
server_build/server/: CMakeLists.txt  CMakeLists.txt~  CTestTestfile.cmake  FileReader.cpp~  HttpResponse.h~  HttpServer.cc~  HttpServer.cpp~  HttpUtils.cpp  HttpUtils.cpp~  HttpUtils.h  Makefile  ServerSocket.cpp~  ThreadPool.cpp~  cmake_install.cmake
server_build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+34 files in other folders)
